忘记密码功能+fix_bug

--- a/src/assets/signin.css
+++ b/src/assets/signin.css
@@ -1,13 +1,24 @@
-.mybutton {
+.login-page-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 50vh;
     text-align: center;
+    padding-top: 30px; /* 增加顶部填充，将内容向上移动 */
 }
 
 .login-title {
     color: #535bf2;
     text-align: center;
-    margin: 100px 0 60px 0;
+    margin: 30px 0 40px 0; /* 调整上外边距 */
     font-size: 36px;
     font-family: Microsoft Yahei;
+}
+
+.login-card {
+    width: 500px;
+    height: 400px;
 }
 
 .login-form {
@@ -16,10 +27,20 @@
     margin-right: 50px;
 }
 
+.options-container {
+    display: flex;
+    justify-content: space-between; /* 使选项对称 */
+    align-items: center;
+}
+
 .login-form-forgot {
-    float: right;
+    margin-left: auto; /* 确保靠右 */
 }
 
 .login-form-button {
     width: 45%;
+}
+
+.mybutton {
+    text-align: center;
 }
